@@ -1,4 +1,6 @@
 //> using scala 3.8.1
+//> using jvm temurin:25
+//> using javaOpt --enable-preview
 //> using options -experimental -language:experimental.captureChecking
 //> using options -source:future
 
